--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -7,10 +7,10 @@
     <meta name="description" content="{{ page.excerpt| strip_html }}" />
     <meta property="og:description" content="{{ page.excerpt| strip_html }}" />
     {% else %}
-    <meta name="description" content="{{ site.description }}">
-    <meta property="og:description" content="{{ site.description }}" />
+    <meta name="description" content="{{ site.tagline }}">
+    <meta property="og:description" content="{{ site.tagline }}" />
     {% endif %}
-    <meta name="author" content="{{ site.name }}" />
+    <meta name="author" content="{{ site.title }}" />
 
     {% if page.title %}
     <meta property="og:title" content="{{ page.title }}" />
