--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,10 +4,10 @@
   {% include meta.html %}
 
   <title>
-    {% if page.title %}
-      {{ page.title }} &middot; {{ site.title }}
+    {% if page.url == '/' %}
+      {{ site.title }} &middot; {{ site.tagline }}  
     {% else %}
-      {{ site.title }} &middot; {{ site.tagline }}
+      {{ page.title }} &middot; {{ site.title }}
     {% endif %}
   </title>
 
