--- a/_includes/svg-icons.html
+++ b/_includes/svg-icons.html
@@ -2,21 +2,18 @@
 	<div class="socialItem">
 		{% if site.footer-links.email %}<a href="mailto:{{ site.footer-links.email }}"><i class="svg-icon email"></i></a>{% endif %}
 	</div>
-
 	<div class="socialItem">
 		{% if site.footer-links.linkedin %}<a target="_blank" href="https://www.linkedin.com/in/{{ site.footer-links.linkedin }}"><i class="svg-icon linkedin"></i></a>{% endif %}
 	</div>
-
 	<div class="socialItem">
 		{% if site.footer-links.github %}<a target="_blank" href="https://github.com/{{ site.footer-links.github }}"><i class="svg-icon github"></i></a>{% endif %}
-	</div>
-
-	<div class="socialItem">
-		{% if site.footer-links.stackoverflow %}<a target="_blank" href="http://stackoverflow.com/{{ site.footer-links.stackoverflow }}"><i class="svg-icon stackoverflow"></i></a>{% endif %}
 	</div>
 </div>
 
 <div class="socialPanel">
+	<div class="socialItem">
+		{% if site.footer-links.stackoverflow %}<a target="_blank" href="http://stackoverflow.com/{{ site.footer-links.stackoverflow }}"><i class="svg-icon stackoverflow"></i></a>{% endif %}
+	</div>
 	<div class="socialItem">
 		{% if site.footer-links.facebook %}<a target="_blank" href="https://www.facebook.com/{{ site.footer-links.facebook }}"><i class="svg-icon facebook"></i></a>{% endif %}
 	</div>
@@ -24,7 +21,9 @@
 	<div class="socialItem">
 		{% if site.footer-links.twitter %}<a target="_blank" href="https://www.twitter.com/{{ site.footer-links.twitter }}"><i class="svg-icon twitter"></i></a>{% endif %}
 	</div>
+</div>
 
+<div class="socialPanelOf2Items">
 	<div class="socialItem">
 		{% if site.footer-links.youtube %}<a target="_blank" href="https://youtube.com/{{ site.footer-links.youtube }}"><i class="svg-icon youtube"></i></a>{% endif %}
 	</div>
