--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -3,10 +3,20 @@
 }
 
 .socialPanel {
-	text-align: center
+    float: left;
+    width: 210px;
+    text-align: center;
+}
+
+.socialPanelOf2Items {
+    float: left;
+    width: 210px;
+    text-align: center;
+    padding-left: 30px;
 }
 
 .socialItem {
-	float: left;
-	margin: 0 6px;
+    float: left;
+    margin: 4px 10px;
 }
+
